--- a/week2/Second/week2.Exercise.ipynb
+++ b/week2/Second/week2.Exercise.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week2/Second/week2.Exercise.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1. Convert a string containing a floating-point number to an integer and print the result."
    ]
   },
