--- a/week2/Second/Week2.1.ipynb
+++ b/week2/Second/Week2.1.ipynb
@@ -238,9 +238,9 @@
    "id": "33fa8e30-1fc5-4f63-a104-eaffa064bb37",
    "metadata": {},
    "source": [
-    "### 5. Example: Using Indentation and Comments in a Python Script\n",
-    "#### In this example, we'll demonstrate the use of indentation and comments in a simple Python script.\n",
-    "#### In this script, we've used indentation to define the structure of the code and comments to provide explanations about different parts of the code."
+    "### 5. Example: Using Comments in a Python Script\n",
+    "#### In this example, we'll demonstrate the use of comments in a simple Python script.\n",
+    "#### In this script, we've used comments to provide explanations about different parts of the code."
    ]
   },
   {
