--- a/week2/Second/Week2.2.ipynb
+++ b/week2/Second/Week2.2.ipynb
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f16d8b14-ec72-4595-94d0-2fede6f5d5da",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
     "circle_radius = 5.0  # Example radius\n",
     "pi = 3.14159\n",
     "\n",
-    "# Calculate the area of the circle and print the result\n",
+    "# Calculate the area of the circle (π*r^2) and print the result\n",
     "area = circle_radius * circle_radius * pi\n",
     "print(f\"The area of a circle with radius {circle_radius} is {area:.2f}.\")"
    ]
