--- a/week2/Second/Week2.4.ipynb
+++ b/week2/Second/Week2.4.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2fc525aa-7f1e-4d96-aac7-6a062b0f3f34",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f0c87086-203a-4bf3-8dbc-14ebc2ea03be",
    "metadata": {},
    "outputs": [],
@@ -173,15 +173,12 @@
     "tags": []
    },
    "source": [
-    "### 5. Example: Using Type Conversion and Random Numbers in a Python Script\n",
-    "#### In this script, we've used type conversion to convert a string representing the number of die sides to an integer. \n",
-    "#### We've also used the random module to generate a random die roll within the specified range. \n",
-    "#### Finally, we print the result of the die roll."
+    "### 5. Example: Using Type Conversion and Random Numbers in a Python Script"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f3089b4e-ccef-4693-a390-14f3511d4bad",
    "metadata": {},
    "outputs": [
@@ -189,9 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Roll 1: 6\n",
-      "Roll 2: 5\n",
-      "Roll 3: 6\n"
+      "Rolling a 6-sided die: 2\n"
      ]
     }
    ],
@@ -211,6 +206,16 @@
     "\n",
     "# Print the die roll\n",
     "print(f\"Rolling a {die_sides_int}-sided die: {die_roll}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f121e28a-0887-4257-a62a-0f4ab72083f0",
+   "metadata": {},
+   "source": [
+    "#### In this script, we've used type conversion to convert a string representing the number of die sides to an integer. \n",
+    "#### We've also used the random module to generate a random die roll within the specified range. \n",
+    "#### Finally, we print the result of the die roll."
    ]
   }
  ],
