--- a/week3/Week3.4.ipynb
+++ b/week3/Week3.4.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "## Objective: Learn to create and manipulate Python lists <br>\n",
-    "\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week3/Week3.4.ipynb\n",
     "### Outline:\n",
     "\n",
     "#### ① Creating a List\n",
@@ -27,6 +27,33 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9fef5219-9ada-4c00-a922-c83cdd7da2e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c198c130-6db7-48d6-9fdc-2f64ebd2f7e2",
+   "metadata": {},
+   "source": [
+    "### Definition: A Python list is a mutable, ordered collection of elements enclosed in square brackets [ ].\n",
+    "#### Key Features:\n",
+    "#### Lists can store elements of different data types (e.g., integers, strings, objects).\n",
+    "#### Lists support indexing and slicing.\n",
+    "#### Lists are dynamic, meaning their size can be changed during runtime. <br>\n",
+    "\n",
+    "### Syntax: \n",
+    "#### list_name = [element1, element2, element3, ...]<br>\n",
+    "\n",
+    "### Examples:\n",
+    "#### Empty list: my_list = [ ]\n",
+    "#### Mixed data types: my_list = [1, 'apple', 3.14, True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e7d99d6-4ab7-4665-b028-13c55e1bb0b0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,10 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f50ed430-e4e8-47ac-8aa8-1d6263136f02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
     "print(fruits[0])  # Output: apple\n",
@@ -103,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "35648fa0-a43f-48e4-8242-83bd1ccb50da",
    "metadata": {},
    "outputs": [
@@ -142,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ec459670-d480-4bca-925d-fedb7c60073f",
    "metadata": {},
    "outputs": [],
@@ -170,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4ad850fb-8165-412a-99d3-57d4a2ad05a7",
    "metadata": {},
    "outputs": [
@@ -209,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4cbcc825-450b-4d5e-8922-13beaae69c58",
    "metadata": {},
    "outputs": [
@@ -249,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "05e1747e-8fb7-4ca0-a1eb-1eb66695564f",
    "metadata": {},
    "outputs": [
@@ -286,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "708745f1-0da5-4b13-9ed3-341133288f69",
    "metadata": {},
    "outputs": [
@@ -324,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cccc7cf9-c7f6-4056-a61d-38885b179cc7",
    "metadata": {},
    "outputs": [
@@ -361,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "0098b16e-e046-438a-9cec-994e4a5b8db1",
    "metadata": {},
    "outputs": [
