--- a/week3/Week3.Exercise1.ipynb
+++ b/week3/Week3.Exercise1.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1ae57089-24e5-4de4-bbca-4bf5994f383b",
+   "metadata": {},
+   "source": [
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week3/Week3.Exercise1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f685a94-fb7e-45d4-83d4-cac8fbdd7cf4",
    "metadata": {
     "tags": []
