--- a/week3/Week3.Exercise2.ipynb
+++ b/week3/Week3.Exercise2.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "bd912335-77c7-4d02-af70-15b0cb7adaa3",
+   "metadata": {},
+   "source": [
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week3/Week3.Exercise2.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f685a94-fb7e-45d4-83d4-cac8fbdd7cf4",
    "metadata": {
     "tags": []
