--- a/week4/Week4.3.ipynb
+++ b/week4/Week4.3.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1360ca20-de0b-4126-82a7-83af81fe1d39",
+   "id": "291d2b4c",
    "metadata": {},
    "source": [
     "## Objective: Learn to create and manipulate Python dictionaries <br>\n",
-    "\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week4/Week4.3.ipynb\n",
     "### Outline:\n",
     "\n",
     "#### ① Creating a Dictionary\n",
@@ -21,14 +21,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24688855-b042-4554-aacc-337e6789aff6",
+   "id": "260f49c1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fb85c20b-15b3-48b0-9ac1-7e9862b04976",
+   "id": "6e9b4241",
    "metadata": {
     "tags": []
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "18115754-8e47-47a1-b07a-b1686e22f180",
+   "id": "342f0e92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,14 +57,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6659e00c-2192-4f24-a29d-b4a075585afe",
+   "id": "00f3e150",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a39efafa-203f-4c4b-963b-10b8402a78b0",
+   "id": "613dea16",
    "metadata": {
     "tags": []
    },
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c02e9b01-077b-443d-99eb-65b4403dff18",
+   "id": "6ac08c20",
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +101,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c169c0-1aa6-4203-886d-1c06151fb1a7",
+   "id": "5c662bd0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7011daf3-a720-435f-ac3d-65b48e2adc2c",
+   "id": "a8a94afe",
    "metadata": {},
    "source": [
     "### 3. Adding and Updating Elements\n",
@@ -117,8 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3984f3c2-cd2c-418e-8874-b612c49cf6f0",
+   "execution_count": 2,
+   "id": "d0d89c03",
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +140,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c9f8582-9f3a-41a2-b103-ecb288cef76d",
+   "id": "2c519fe0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "44bf996c-018a-47e2-bc20-db68e309b6b9",
+   "id": "3e898a17",
    "metadata": {},
    "source": [
     "### 4. Removing Elements\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14b69eea-f408-45da-b57e-08e0cf7d8f99",
+   "id": "52c3f181",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
     "person.pop(\"age\")\n",
     "print(person)  # Output: {'name': 'John', 'city': 'New York'}\n",
     "\n",
-    "person.popitem()\n",
+    "person.popitem() # Remove the last item\n",
     "print(person)  # Output: {'name': 'John'}\n",
     "\n",
     "person.clear()\n",
@@ -186,15 +186,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c11ef014-3b1e-4a96-9784-fd4be353efbc",
+   "execution_count": 4,
+   "id": "3aae7424",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'John'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "43154830-02a7-4b4e-a070-2a18bb934e8a",
+   "id": "cac63968",
    "metadata": {},
    "source": [
     "### 5. Looping Through a Dictionary\n",
@@ -204,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "63cdc154-9ed3-4b8c-9388-dd53d27edc70",
+   "id": "c924abfd",
    "metadata": {},
    "outputs": [
     {
@@ -239,14 +250,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50f3192f-767f-44df-8532-413ca0f35a3b",
+   "id": "2a6b00ca",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6e78d164-a2d8-4d0c-aa2a-e6dde8387073",
+   "id": "70fab57d",
    "metadata": {},
    "source": [
     "### 6. Dictionary Methods\n",
@@ -255,8 +266,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "adade2a6-6dee-4165-a97b-bc316631e245",
+   "execution_count": 7,
+   "id": "fe46749a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,14 +284,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6300b9f-01cf-41a9-903a-a5e4655f10c6",
+   "id": "4361e5c8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a6993df2-2e82-40c6-967e-600796c7c8b7",
+   "id": "c799c8b0",
    "metadata": {},
    "source": [
     "### 7. Example: Working with Dictionaries\n",
@@ -290,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "beaeaa5b-c2ed-4a44-baae-688faa70da30",
+   "id": "7c15fda7",
    "metadata": {},
    "outputs": [
     {
