--- a/week4/Week4.Exercise1.ipynb
+++ b/week4/Week4.Exercise1.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ef965d9-4073-4391-b5dd-92bd7eadc719",
+   "id": "1720409c",
+   "metadata": {},
+   "source": [
+    "#### https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week4/Week4.Exercise1.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7eded212",
    "metadata": {},
    "source": [
     "#### 1. Convert the given list to a tuple."
@@ -11,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "64cca006-4333-403f-a584-64dc2fcef75e",
+   "id": "c08d4481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +29,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3a1480-64cf-41db-aeb0-f1da7fa28703",
+   "id": "49749eaf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "834dca7e-20b3-4e8f-8f1c-6449f9d69b5c",
+   "id": "b81062d9",
    "metadata": {},
    "source": [
     "#### 2. Convert the given tuple to a list."
@@ -37,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "24b0f313-8326-4093-8f80-efe0528e3316",
+   "id": "6fdaea0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +55,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5476fa1-9e73-40cb-aa6b-0ac1c8dd181e",
+   "id": "4e3533d9",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "eac3d296-01c8-47be-9e2f-a4cfdcb30547",
+   "id": "7aaffd8c",
    "metadata": {},
    "source": [
     "#### 3. Convert the given list to a set."
@@ -63,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ab5ee664-b4fa-46bd-b4c8-072aa70e52a9",
+   "id": "a7446142",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dfb7aac-a72a-4784-96e0-f1be04a3fe03",
+   "id": "c5cf42fc",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d4b6bf73-726c-43dd-bd31-bba5bc9373e4",
+   "id": "242ea4c4",
    "metadata": {},
    "source": [
     "#### 4. Find the intersection of two given sets."
@@ -89,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c25dca91-365e-493f-b7c0-7bc6ddb8cfae",
+   "id": "b9bbeed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +108,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc80d71-7c8e-4eb1-9b67-22c3f7debf42",
+   "id": "ce2e1eb0",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ce5c7dd9-898a-4010-836a-2c1b20984899",
+   "id": "fac36217",
    "metadata": {},
    "source": [
     "#### 5. Find the union of two given sets."
@@ -116,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6960a57f-01ff-4e5f-925c-d4aaff8be183",
+   "id": "01690986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,14 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6519ff83-b9f3-4c6b-9cb1-a442440d8d36",
+   "id": "ffeadb4d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "329d3dca-b6df-4ab0-a81b-4339a6aa6dfb",
+   "id": "ebe2d371",
    "metadata": {},
    "source": [
     "#### 6. Find the difference between two given sets."
@@ -143,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "17a35512-392b-478c-8fc6-524c6f1a3242",
+   "id": "0e088eba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,14 +162,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69d863d-496d-4c09-93b8-269b0058d9cb",
+   "id": "d1fa7057",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "bac1d74b-20b4-4bf3-a59e-d1a5a4173c49",
+   "id": "5fde0a5a",
    "metadata": {},
    "source": [
     "#### 7. Check if the given element exists in the tuple."
@@ -170,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e091c070-3618-47db-810a-27e57ea3385d",
+   "id": "e986c987",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,14 +189,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb25e977-ef01-4204-922c-2c6a4e67cf59",
+   "id": "26a3ef42",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "7e0499cd-8f8c-4ce1-9cb6-4a078b1c738b",
+   "id": "95e0eaba",
    "metadata": {},
    "source": [
     "#### 8. Add an element to the given set."
@@ -197,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b69ae816-3b5f-48a4-8e07-6548340a3b5a",
+   "id": "8bfe3a9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,14 +216,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3add007-2554-4a4f-8585-18a759377ca7",
+   "id": "62a2478e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8c10a02e-5d39-4eeb-be96-21cee6d476f8",
+   "id": "4ba947b6",
    "metadata": {},
    "source": [
     "#### 9. Remove an element from the given set."
@@ -224,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "658742fa-224f-4ed8-94e5-c908c030cf44",
+   "id": "fd6ce904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,14 +243,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afa12284-0814-4982-9507-9e81c99ff184",
+   "id": "a4921606",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d0e7e848-9bda-46d5-94f8-667eb57db35b",
+   "id": "a725e44f",
    "metadata": {},
    "source": [
     "#### 10. Find the length of the given tuple."
@@ -251,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fbfafef3-9511-4901-b71d-9a989a2a2622",
+   "id": "0d841ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,14 +269,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db5e3e2c-f9c9-4656-8dd4-12e4af932593",
+   "id": "1d91e6df",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0f0bd48c-e28e-47b5-865d-482573c8a8a5",
+   "id": "44af1d20",
    "metadata": {},
    "source": [
     "#### 11. Find the index of the given element in the tuple."
@@ -277,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "76386a6f-d720-48ca-8d19-790e0bcd3615",
+   "id": "708ce0db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,14 +296,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1ada20-ae50-4c62-bf45-2024814b1300",
+   "id": "1a74309e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "5bf5aaf8-e536-4cf5-aa57-989fa5ed9d17",
+   "id": "d9b857e5",
    "metadata": {},
    "source": [
     "#### 12. Find the count of the given element in the tuple."
@@ -304,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "49b316ec-0d19-470c-9699-c9f95c56cc11",
+   "id": "366221d0",
    "metadata": {},
    "outputs": [],
    "source": [
