--- a/week4/Week4.Exercise2.ipynb
+++ b/week4/Week4.Exercise2.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ef965d9-4073-4391-b5dd-92bd7eadc719",
+   "id": "ab55dad6",
+   "metadata": {},
+   "source": [
+    "#### https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week4/Week4.Exercise2.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05346da9",
    "metadata": {},
    "source": [
     "#### 1. Create a list with the following elements: \"apple\", \"banana\", \"cherry\"."
@@ -11,14 +19,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04bd7f16-1889-40fc-96d3-807325db7dc7",
+   "id": "85c86eb1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e4748960-b655-4136-8ebf-1d1e1ac6d9fd",
+   "id": "187665df",
    "metadata": {},
    "source": [
     "#### 2. Create a set with the following elements: \"apple\", \"banana\", \"cherry\"."
@@ -27,14 +35,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8786b1e9-ec24-40ce-951f-b6a7075a1688",
+   "id": "144b9c69",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b86cb8e8-243f-4315-9bb9-90ae961f2760",
+   "id": "99a7e4ec",
    "metadata": {},
    "source": [
     "#### 3. Create a dictionary with the following keys and values: \"apple\" - 3, \"banana\" - 5, \"cherry\" - 2."
@@ -43,14 +51,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9155d83b-488e-4d5d-b4c1-9ab6502caf1f",
+   "id": "4f98d30a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6b7dc48c-313e-404f-babd-a8bff810fce0",
+   "id": "3f6d481a",
    "metadata": {},
    "source": [
     "#### 4. Create a tuple with the following elements: \"apple\", \"banana\", \"cherry\"."
@@ -59,14 +67,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b22448b-4857-4f0a-a215-6dc9e7574829",
+   "id": "3972a82c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cefd920c-7cdd-4856-8976-4e4c34377c5f",
+   "id": "db371e8f",
    "metadata": {},
    "source": [
     "#### 5. Access the value for the key \"apple\" in the given dictionary."
@@ -75,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a8b20ae9-a11b-4de0-a6e1-e40d8fe65617",
+   "id": "1ee6f56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +93,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b159eae0-7d40-431e-af99-b25a09b1b71a",
+   "id": "cab6a913",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0e88064f-5115-4adf-97f9-6550fcb90ad1",
+   "id": "f6f2efa3",
    "metadata": {},
    "source": [
     "#### 6. Update the value for the key \"banana\" in the given dictionary to 10."
@@ -101,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b382c3a-048e-4c75-bc27-9702d34df6fa",
+   "id": "1528e0aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +119,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb2e344-b910-46d7-b450-d19d87d5247b",
+   "id": "d4d88ec3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0c97c534-1456-48c2-9ed8-320ec2c5e99b",
+   "id": "b9bdeeb5",
    "metadata": {},
    "source": [
     "#### 7. Remove the \"cherry\" key-value pair from the given dictionary."
@@ -127,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8d79b50b-9f2a-411c-8d29-97fe99d95e5f",
+   "id": "d86c8213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +145,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4750c526-7eb4-41dc-96a8-a69fb70ae0ba",
+   "id": "aa1e5b64",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a3cb007d-268c-4bca-98cb-ab7420348ca4",
+   "id": "11e06547",
    "metadata": {},
    "source": [
     "#### 8. Check if the given element exists in the list."
@@ -153,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "10d276c4-f126-480a-aab6-a1fc2acec5f2",
+   "id": "13e879e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,14 +172,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f20f6652-cec4-44e8-9980-5112134baa52",
+   "id": "2ace025d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "563e76ee-88a4-471e-9f77-627319f97a79",
+   "id": "90db96f2",
    "metadata": {},
    "source": [
     "#### 9. Add an element to the given list."
@@ -180,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ed13d14e-182d-40b0-ae4f-a67c3c556b53",
+   "id": "58ba0122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54ebb1cd-7f9b-4344-b40e-b140e93df3ff",
+   "id": "a726628d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "34d2b9db-e558-4172-b507-9e9ccce778ef",
+   "id": "79eefce2",
    "metadata": {},
    "source": [
     "#### 10.Remove the given element from the list."
@@ -207,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "27c0bfeb-8dce-4a61-8011-9d7864120497",
+   "id": "39b51bce",
    "metadata": {},
    "outputs": [],
    "source": [
