--- a/week4/Week4.4.ipynb
+++ b/week4/Week4.4.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1360ca20-de0b-4126-82a7-83af81fe1d39",
+   "id": "5645766f",
    "metadata": {
     "tags": []
    },
    "source": [
     "## Objective: Objective: Understand the differences between Python's list, set, dictionary, and tuple data structures, and when to use each <br>\n",
-    "\n",
+    "https://colab.research.google.com/github/JunetaeKim/PythonClass/blob/main/week4/Week4.4.ipynb\n",
     "### Outline:\n",
     "\n",
     "#### ① Lists\n",
@@ -22,14 +22,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeb26c6a-9d7e-430d-ba69-5eb1a0993b57",
+   "id": "78fdd9d6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ded11eb9-aca1-430e-9c44-8ca9d5e4a72e",
+   "id": "55dadb64",
    "metadata": {
     "tags": []
    },
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "87fdba98-36dd-4ccf-bd8a-ed3d7dc83d9a",
+   "id": "80a38d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5660a93-9bb2-47c0-aabd-1632f8876454",
+   "id": "b4d6e286",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b0a6f1d5-0e30-4fe5-beb0-0b1a86241c6f",
+   "id": "888f1d6c",
    "metadata": {
     "tags": []
    },
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "20fb33ed-40fd-4b59-920b-7389c94811ec",
+   "execution_count": 1,
+   "id": "632f6c43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c0b478-6f23-4c53-9b0b-0daacd56e303",
+   "id": "77355c65",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "44a0d9dd-0acd-4a94-bf7f-aba84b90ae60",
+   "id": "dedfe7bd",
    "metadata": {},
    "source": [
     "### 3. Sets\n",
@@ -108,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ed292dad-afd7-41ac-a599-9f1ce1819b87",
+   "execution_count": 2,
+   "id": "76a92814",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +121,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe378391-c13a-4446-9bcb-f31487bc2f5a",
+   "id": "be83bb7e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "844c935f-5cde-4abf-9046-87f379a20b97",
+   "id": "4f6edc32",
    "metadata": {},
    "source": [
     "### 4. Dictionaries\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8f976e1c-ac63-4cfd-87fa-859cb36b2256",
+   "id": "ed6004c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,17 +152,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d29dded1-b84a-45c5-84ac-be6592488f0f",
+   "id": "8f94fd7e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "cf5609b8-ab38-425e-9908-76ded692c5b3",
+   "id": "d78f663b",
    "metadata": {},
    "source": [
-    "### 6. Comparing Python Data Structures\n",
+    "### 5. Comparing Python Data Structures\n",
     "#### Lists and tuples are both ordered and allow duplicates, but lists are mutable while tuples are immutable.\n",
     "#### Sets are unordered and do not allow duplicates, while dictionaries store key-value pairs with unique keys.\n",
     "#### Choose a data structure based on your requirements, such as whether you need to modify the elements, have unique elements, or store key-value pairs."
@@ -170,66 +170,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03d5a5ff-3c27-4e26-bc5f-0f663107d383",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d2fd2b7-faeb-422e-9d66-6991a4965963",
-   "metadata": {},
-   "source": [
-    "### 7. Example: Working with Different Data Structures"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "id": "cc195eec-c250-45d7-9b7b-9d6f941774de",
+   "id": "e9b15037",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Alice', 'Bob', 'Charlie', 'Alice', 'Eve']\n",
-      "{'Charlie', 'Bob', 'Alice', 'Eve'}\n",
-      "{'Alice': 26, 'Bob': 30, 'Charlie': 22}\n"
+      "Original List:  [1, 2, 2, 3, 4]\n",
+      "Modified List:  [5, 2, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
-    "# List\n",
-    "names = [\"Alice\", \"Bob\", \"Charlie\", \"Alice\"]\n",
-    "names.append(\"Eve\")\n",
-    "print(names)  # Output: ['Alice', 'Bob', 'Charlie', 'Alice', 'Eve']\n",
+    "# Lists are mutable and can contain duplicates\n",
+    "list_example = [1, 2, 2, 3, 4]\n",
+    "print(\"Original List: \", list_example)\n",
     "\n",
-    "# Tuple\n",
-    "point = (3, 4)\n",
-    "# point[0] = 5  # This would raise an error\n",
-    "\n",
-    "# Set\n",
-    "unique_names = {\"Alice\", \"Bob\", \"Charlie\", \"Alice\"}\n",
-    "unique_names.add(\"Eve\")\n",
-    "print(unique_names)  # Output: {'Alice', 'Eve', 'Charlie', 'Bob'}\n",
-    "\n",
-    "# Dictionary\n",
-    "ages = {\"Alice\": 25, \"Bob\": 30, \"Charlie\": 22}\n",
-    "ages[\"Alice\"] = 26\n",
-    "print(ages)  # Output: {'Alice': 26, 'Bob': 30, 'Charlie': 22}"
+    "# Modify an element\n",
+    "list_example[0] = 5\n",
+    "print(\"Modified List: \", list_example)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "365f6acf-aba1-4439-a545-c4fe55df1a48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Tuple:  (1, 2, 2, 3, 4)\n",
+      "Cannot modify a tuple!\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple_example = (1, 2, 2, 3, 4)\n",
+    "print(\"Original Tuple: \", tuple_example)\n",
+    "\n",
+    "# Trying to modify an element raises an error\n",
+    "try:\n",
+    "    tuple_example[0] = 5\n",
+    "except TypeError:\n",
+    "    print(\"Cannot modify a tuple!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "984ccacf-147f-4be5-a0f3-55c9b0d127f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set:  {1, 2, 3, 4}\n",
+      "Set after adding a duplicate:  {1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sets are unordered and do not allow duplicates\n",
+    "set_example = {1, 2, 2, 3, 4}\n",
+    "print(\"Set: \", set_example)\n",
+    "\n",
+    "# Adding a duplicate item has no effect\n",
+    "set_example.add(2)\n",
+    "print(\"Set after adding a duplicate: \", set_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a928a44d-8b18-4ac4-809f-b6498a90c947",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Dictionary:  {'apple': 1, 'banana': 2, 'cherry': 3}\n",
+      "Modified Dictionary:  {'apple': 5, 'banana': 2, 'cherry': 3}\n",
+      "Key not found in dictionary!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dictionaries store key-value pairs with unique keys\n",
+    "dict_example = {\"apple\": 1, \"banana\": 2, \"cherry\": 3}\n",
+    "print(\"Original Dictionary: \", dict_example)\n",
+    "\n",
+    "# Modify the value of a key\n",
+    "dict_example[\"apple\"] = 5\n",
+    "print(\"Modified Dictionary: \", dict_example)\n",
+    "\n",
+    "# Trying to access a non-existent key raises an error\n",
+    "try:\n",
+    "    print(dict_example[\"orange\"])\n",
+    "except KeyError:\n",
+    "    print(\"Key not found in dictionary!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58bcdefa-ee85-4cab-9a98-45ef23fc7eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "9dd35f49-aa59-454a-9c29-a7b8083518c3",
+   "id": "b3f153a5",
    "metadata": {},
    "source": [
-    "#### In this example, we've shown how to work with different Python data structures. \n",
-    "#### By understanding the characteristics of lists, tuples, sets, and dictionaries, you can choose the appropriate data structure for your specific needs. <BR>\n",
-    "\n",
-    "#### To summarize:\n",
+    "### To summarize:\n",
     "#### Use lists when you need an ordered, mutable collection that allows duplicates.\n",
     "#### Use tuples when you need an ordered, immutable collection that allows duplicates.\n",
     "#### Use sets when you need an unordered collection of unique elements.\n",
@@ -240,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec1d8c26-64b2-4935-8267-d1a778ea2d57",
+   "id": "1bbc78ef",
    "metadata": {},
    "outputs": [],
    "source": []
